# DNS-Proxy-Sinkhole

./: .gitignore  CMakeLists.txt  README.md  test_dns_server.py
dashboard/: index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
include/: config.hpp  dns_configurator.hpp  dns_message.hpp  http_server.hpp  rules.hpp  server.hpp
src/: config.cpp  dns_configurator.cpp  dns_message.cpp  http_server.cpp  main.cpp  rules.cpp  server.cpp
